--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,16 @@
 {
   "name": "PWA Demo",
   "short_name": "PWA",
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#23f48b",
   "description": "Demo app to showcase what PWA can do in a modern browser.",
   "icons": [
     {
       "src": "favicon.svg",
-      "type": "image/svg"
+      "sizes": "48x48 72x72 96x96 128x128 256x256 512x512",
+      "type": "image/svg+xml",
+      "purpose": "any"
     }
   ]
 }
